--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <div class="middle-container">
     <div class="profile">
-      <img class="profile-img" src="C:\Users\Henry\Documents\Visual Studio Code\Web Development\CSS - My Site\images\profile-img.png" alt="profile-img">
+      <img class="profile-img" src="/images/profile-img.png" alt="profile-img">
       <h2>Hello!</h2>
       <p class="intro">I'm a web developer based in Houston, TX. I have a passion for web developing and learning new programming languages. </p>
     </div>
