update image redirectory

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       <h2>My Skills</h2>
       
       <div class="skill-row">
-        <img class="web-img" src="C:\Users\Henry\Documents\Visual Studio Code\Web Development\CSS - My Site\images\programming.png" alt="programming-img">
+        <img class="web-img" src="\images\programming.png" alt="programming-img">
         <h3>Web Development & Programming </h3>
         <p>I began to learn web development in High School, teaching myself HTML and CSS, and now learning Javascript and other programming languages to broaden my knowledge.</p>
       </div>
       
       <div class="skill-row">
-        <img class="seo-img" src="C:\Users\Henry\Documents\Visual Studio Code\Web Development\CSS - My Site\images\seo-report.png" alt="webdevelopment-img">
+        <img class="seo-img" src="\images\seo-report.png" alt="webdevelopment-img">
         <h3>Digital Marketing / SEO</h3>
         <p>I graduated from The University of Houston with a Bachelor of Science in Digital Media. My degree has provided me with the skills and knowledge to understand how internet marketing is applied across the web and how to utilize SEO.</p>
       </div>
